--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
             <div class="spinner"></div>
         </div>
     </div>
-    <script type="text/javascript" src="https://libs.zappar.com/zappar-cv/2.1.2/zappar-cv.js"></script>
+    <script type="text/javascript" src="zappar-cv.js"></script>
     <script>
   setTimeout(() => {
     let licErr = document.querySelector("div:contains('Visit our licensing page')");
