--- a/index.html
+++ b/index.html
@@ -149,7 +149,8 @@
             <div class="spinner"></div>
         </div>
     </div>
-    <script type="text/javascript" src="https://libs.zappar.com/zappar-cv/2.1.2/zappar-cv.js"></script>
+    <!-- <script type="text/javascript" src="https://libs.zappar.com/zappar-cv/2.1.2/zappar-cv.js"></script> -->
+    <script type="text/javascript" src="https://github.com/ndkndkndk2958/testserver/blob/main/zappar-cv.js"></script>
     <script>
         setTimeout(() => {
             let licErr = document.querySelector("div");
@@ -163,6 +164,7 @@
 
         const buildUrl = "Build";
         const loaderUrl = buildUrl + "/a0eb54968f12b724932ff61ec1f2137c.loader.js";
+        console.log("--------loaderUrl: " + loaderUrl);
         const config = {
             dataUrl: buildUrl + "/9282c5583ed87e9ce753981549890552.data",
             frameworkUrl: buildUrl + "/498be0faeee7fda0aa215d884b48f0e4.framework.js",
