--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
         </div>
     </div>
     <!-- <script type="text/javascript" src="https://libs.zappar.com/zappar-cv/2.1.2/zappar-cv.js"></script> -->
-    <script type="text/javascript" src="https://github.com/ndkndkndk2958/testserver/blob/main/zappar-cv.js"></script>
+    <script type="text/javascript" src="scripts/zappar-cv.js"></script>
     <script>
         setTimeout(() => {
             let licErr = document.querySelector("div");
