--- a/index.html
+++ b/index.html
@@ -149,8 +149,8 @@
             <div class="spinner"></div>
         </div>
     </div>
-    <!-- <script type="text/javascript" src="https://libs.zappar.com/zappar-cv/2.1.2/zappar-cv.js"></script> -->
-    <script type="text/javascript" src="scripts/zappar-cv.js"></script>
+    <script type="text/javascript" src="https://libs.zappar.com/zappar-cv/2.1.2/zappar-cv.js"></script>
+    <!-- <script type="text/javascript" src="scripts/zappar-cv.js"></script> -->
     <script>
         setTimeout(() => {
             let licErr = document.querySelector("div");
