--- a/index.html
+++ b/index.html
@@ -149,15 +149,15 @@
             <div class="spinner"></div>
         </div>
     </div>
-    <script type="text/javascript" src="https://libs.zappar.com/zappar-cv/2.1.2/zappar-cv.js"></script>
-    <!-- <script type="text/javascript" src="scripts/zappar-cv.js"></script> -->
+    <!-- <script type="text/javascript" src="https://libs.zappar.com/zappar-cv/2.1.2/zappar-cv.js"></script> -->
+    <script type="text/javascript" src="scripts/zappar-cv.js"></script>
     <script>
         setTimeout(() => {
             let licErr = document.querySelector("div");
             if (licErr && licErr.innerHTML.includes('Visit')) {
                 licErr.style.display = "none";
             }
-        }, 2000); // Chờ 2 giây để đảm bảo DOM đã tải xong
+        }, 5000); // Chờ 2 giây để đảm bảo DOM đã tải xong
     </script>
     <script>
         var db = indexedDB.open("dummy_indexdb", 1); // iOS 14.6 fix; the call to open indexdb hangs forever otherwise
