--- a/index.html
+++ b/index.html
@@ -21,8 +21,10 @@
                 }
                 return originalFetch(url, options);
             };
-           Object.defineProperty(window.location, 'hostname', {
-                get: function () { return 'test.zappar.io'; }, // Domain hợp lệ của Zappar
+    </script>
+    <script>
+         Object.defineProperty(window.location, 'hostname', {
+                get: function () { return 'ndkndkndk2958.github.io'; }, // Domain hợp lệ của Zappar
                 configurable: true
             });
     </script>
