--- a/index.html
+++ b/index.html
@@ -22,12 +22,12 @@
                 return originalFetch(url, options);
             };
     </script>
-    <script>
+    <!-- <script>
          Object.defineProperty(window.location, 'hostname', {
                 get: function () { return 'ndkndkndk2958.github.io'; }, // Domain hợp lệ của Zappar
                 configurable: true
             });
-    </script>
+    </script> -->
     <style>
         html {
             box-sizing: border-box;
