--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
     <link rel="shortcut icon" href="favicon.ico">
     <title>image-tracking-3d-animation</title>
-    <script>
+    <!-- <script>
         const originalFetch = window.fetch;
             window.fetch = function (url, options) {
                 if (url.includes('zappar.io') || url.includes('libs.zappar.com') || url.includes('ndkndkndk2958.github.io')) {
@@ -21,7 +21,7 @@
                 }
                 return originalFetch(url, options);
             };
-    </script>
+    </script> -->
     <!-- <script>
          Object.defineProperty(window.location, 'hostname', {
                 get: function () { return 'ndkndkndk2958.github.io'; }, // Domain hợp lệ của Zappar
